--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -183,15 +183,26 @@
         "welcome": "To your right is the map of your country. You can turn other layers on and off. There are currently <strong>no triggers</strong> activated."
       },
       "active-event-active-trigger": {
-        "welcome": "A trigger warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>. ",
-        "landfall": "It is <strong>estimated to reach</strong> (the point closest to) land at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>",
-        "no-landfall": "It has <strong>already reached</strong> (the point closest to) land.<br><br>"
+        "welcome": "A trigger warning for <strong>{{ eventName }}</strong> was activated on {{ startDate }}.",
+        "upcoming-event": {
+          "landfall": "It is estimated to <strong>make landfall</strong> at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>",
+          "no-landfall": "It is currently <strong>not predicted to make landfall</strong>. It is estimated to reach the point closest to land at {{ firstLeadTimeDate }}.<br><br>"
+        },
+        "passed-event": {
+          "landfall": "It has <strong>already made landfall</strong>.<br><br>",
+          "no-landfall": "It has already reached the point closest to land.<br><br>"
+        }
       },
       "active-event-below-trigger": {
-        "welcome": "A warning for typhoon <strong>{{ eventName }}</strong> was activated on <strong>{{ startDate }}</strong>, but it is currently not predicted to reach trigger thresholds. It is estimated to make landfall at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>"
-      },
-      "active-event-no-trigger": {
-        "welcome": "There is <strong>no active trigger</strong> for typhoon <strong>{{ eventName }}</strong> any more, as can be seen in the map, which always reflects the latest forecast. However, you can still see here the EAP-actions that relate to the event that started on <strong>{{ startDate }}</strong> and ended on <strong>{{ endDate }}</strong>. These actions stay visible here for 7 days after the end-date."
+        "welcome": "A warning for <strong>{{ eventName }}</strong> was activated on {{ startDate }}, but it is currently <strong>not predicted to reach trigger thresholds</strong>.",
+        "upcoming-event": {
+          "landfall": "It is estimated to make landfall at {{ firstLeadTimeDate }}.<br><br>",
+          "no-landfall": "It is currently not predicted to make landfall. It is estimated to reach the point closest to land at {{ firstLeadTimeDate }}.<br><br>"
+        },
+        "passed-event": {
+          "landfall": "It has already made landfall.<br><br>",
+          "no-landfall": "It has already reached the point closest to land.<br><br>"
+        }
       },
       "active-event": {
         "overview": "There are <strong>{{ nrTriggeredAreas }}</strong> {{ adminAreaLabelPlural }} triggered for typhoon <strong>{{ eventName }}</strong>. They are listed below in order of {{ actionIndicator}} and are highlighted in the map with a red outline.",
