--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -186,7 +186,8 @@
         "welcome": "A trigger warning for <strong>{{ eventName }}</strong> was activated on {{ startDate }}.",
         "upcoming-event": {
           "landfall": "It is estimated to <strong>make landfall</strong> at <strong>{{ firstLeadTimeDate }}</strong>.<br><br>",
-          "no-landfall": "It is currently <strong>not predicted to make landfall</strong>. It is estimated to reach the point closest to land at {{ firstLeadTimeDate }}.<br><br>"
+          "no-landfall": "It is currently <strong>not predicted to make landfall</strong>. It is estimated to reach the point closest to land at {{ firstLeadTimeDate }}.<br><br>",
+          "no-landfall-yet": "It is currently <strong>not predicted to make landfall yet</strong>. Keep monitoring the event.<br><br>"
         },
         "passed-event": {
           "landfall": "It has <strong>already made landfall</strong>.<br><br>",
@@ -197,7 +198,8 @@
         "welcome": "A warning for <strong>{{ eventName }}</strong> was activated on {{ startDate }}, but it is currently <strong>not predicted to reach trigger thresholds</strong>.",
         "upcoming-event": {
           "landfall": "It is estimated to make landfall at {{ firstLeadTimeDate }}.<br><br>",
-          "no-landfall": "It is currently not predicted to make landfall. It is estimated to reach the point closest to land at {{ firstLeadTimeDate }}.<br><br>"
+          "no-landfall": "It is currently not predicted to make landfall. It is estimated to reach the point closest to land at {{ firstLeadTimeDate }}.<br><br>",
+          "no-landfall-yet": "It is currently <strong>not predicted to make landfall yet</strong>. Keep monitoring the event.<br><br>"
         },
         "passed-event": {
           "landfall": "It has already made landfall.<br><br>",
