--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -64,14 +64,20 @@
       "stop-trigger-popup": {
         "eap": {
           "header": "Stop Trigger",
-          "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>. In case of a new event, the area will be triggered again by the IBF-Portal. But within the current event - even if predictions worsen - the trigger for this area will remain stopped.",
+          "message": "Are you sure? You are about to stop the trigger warning in <strong>{{ placeCodeName }}</strong>.<br><br>In case of a new event, the area will be triggered again by the IBF-Portal. But within the current event - even if predictions worsen - the trigger for this area will remain stopped. {{disasterSpecificText}}",
+          "disaster-specific": {
+            "floods": "(An event closes when the forecast stays below threshold for 7 days.)"
+          },
           "confirm": "Yes, stop trigger",
           "cancel": "No, keep trigger",
           "failure": "Failed to stop trigger."
         },
         "no-eap": {
           "header": "Stop Alert",
-          "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>. In case of a new event, a new alert for the area will be given by the IBF-Portal. But within the current event - even if predictions worsen - the alert for this area will remain stopped.",
+          "message": "Are you sure? You are about to stop the alert in <strong>{{ placeCodeName }}</strong>.<br><br>In case of a new event, a new alert for the area will be given by the IBF-Portal. But within the current event - even if predictions worsen - the alert for this area will remain stopped. {{disasterSpecificText}}",
+          "disaster-specific": {
+            "heavy-rain": "(An event closes when the forecast stays below threshold for 7 days.)"
+          },
           "confirm": "Yes, stop alert",
           "cancel": "No, keep alert",
           "failure": "Failed to stop alert."
@@ -80,14 +86,14 @@
       "reactivate-trigger-popup": {
         "eap": {
           "header": "Reactivate Trigger",
-          "message": "Are you sure? You are about to reactivate the trigger warning in <strong>{{ placeCodeName }}</strong>. If any actions were already checked off before this area was stopped, they will still be after reactivating.",
+          "message": "Are you sure? You are about to reactivate the trigger warning in <strong>{{ placeCodeName }}</strong>.<br><br>If any actions were already checked off before this area was stopped, they will still be after reactivating.",
           "confirm": "Yes, reactivate trigger",
           "cancel": "No, keep stopped trigger",
           "failure": "Failed to reactivate trigger."
         },
         "no-eap": {
           "header": "Reactivate Alert",
-          "message": "Are you sure? You are about to reactivate the alert in <strong>{{ placeCodeName }}</strong>. If any actions were already checked off before this area was stopped, they will still be after reactivating.",
+          "message": "Are you sure? You are about to reactivate the alert in <strong>{{ placeCodeName }}</strong>.<br><br>If any actions were already checked off before this area was stopped, they will still be after reactivating.",
           "confirm": "Yes, reactivate alert",
           "cancel": "No, keep stopped alert",
           "failure": "Failed to reactivate alert."
