--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -45,6 +45,7 @@
     "more-information": "Click for more info on this indicator.",
     "default-header-label": "...Loading",
     "exposed-prefix": "Exposed",
+    "stopped-prefix": "Manually stopped",
     "all-prefix": "All",
     "exposed-subgroups": ""
   },
