feat: show "(stopped)" for stopped areas

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -47,7 +47,8 @@
     "exposed-prefix": "Exposed",
     "stopped-prefix": "Manually stopped",
     "all-prefix": "All",
-    "exposed-subgroups": ""
+    "exposed-subgroups": "",
+    "stopped-placecode": "(stopped)"
   },
   "areas-of-focus-summary-component": {
     "title": "Actions Summary",
