--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
     "welcome": "Hello! Welcome to IBF.",
     "instruction": "This chat will guide you through the system. You will find it to the left of the screen. Please login below.",
     "video": "Click for the IBF Guide.",
-    "note": "NOTE: This dashboard works best in Chrome, Firefox, Safari and Microsoft Edge. The dashboard is not compatible with Internet Explorer.",
+    "note": "NOTE: This portal works best on desktop or tablet using Chrome, Firefox, Safari and Microsoft Edge.<br>The portal is not compatible with Internet Explorer.<br>The portal is not optimized for mobile phones yet.",
     "forgot-password": "Forgot password?",
     "forgot-password-message": "If you forgot your password please send a request to ",
     "environment-label": { "production": "Live", "stage": "Demo" }
@@ -41,8 +41,8 @@
     },
     "screen-orientation": {
       "mobile": {
-        "title": "IBF Portal - Mobile",
-        "warning-message": "The IBF Portal is not optimized for mobile devices yet.",
+        "title": "IBF Portal - Mobile Phones",
+        "warning-message": "The IBF Portal is not optimized for mobile phones yet.",
         "instructions-message": "For optimal use of all the features, please open it on desktop or tablet."
       },
       "tablet": {
