--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -5,7 +5,9 @@
     "activation-report": "Open all activations",
     "copy-to-clipboard": "Copy to clipboard",
     "copy-success": "Activation data successfully copied to clipboard. It can be pasted into a spreadsheet.",
-    "copy-fail": "There was a problem with copying the activation data"
+    "copy-fail": "There was a problem with copying the activation data",
+    "page-explanation": "In this table you can find all of the events that were triggered by IBF.",
+    "copy-instructions": "You can copy the table into excel by clicking on the \"Copy to clipboard\" button on the right and pasting into your file."
   },
   "login-page": {
     "title": "Login",
