fix: activation log explanation AB#17320

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -6,8 +6,9 @@
     "copy-to-clipboard": "Copy to clipboard",
     "copy-success": "Activation data successfully copied to clipboard. It can be pasted into a spreadsheet.",
     "copy-fail": "There was a problem with copying the activation data",
-    "page-explanation": "In this table you can find all of the events that were triggered by IBF.",
-    "copy-instructions": "You can copy the table into excel by clicking on the \"Copy to clipboard\" button on the right and pasting into your file."
+    "page-title": "Activation log",
+    "page-explanation": "This table shows all historical activations, every time the IBF-portal was triggered. There is one row per triggered area.",
+    "copy-instructions": "Activation data can be copied into a spreadsheet by clicking on the \"Copy to clipboard\" button on the right."
   },
   "login-page": {
     "title": "Login",
